@@ -15,6 +15,7 @@ jobs:
 
     name: Analyze
     runs-on: ubuntu-latest
+    timeout-minutes: 15
 
     strategy:
       fail-fast: false
