@@ -46,6 +46,7 @@ permissions:
 jobs:
   test-sqlite:
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     strategy:
       matrix:
         include:
@@ -89,6 +90,7 @@ jobs:
 
   test-postgres:
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     continue-on-error: ${{ matrix.experimental }}
     strategy:
       matrix:
@@ -180,6 +182,7 @@ jobs:
 
   test-mysql:
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     continue-on-error: ${{ matrix.experimental }}
     strategy:
       matrix:
@@ -249,6 +252,7 @@ jobs:
 
   test-sqlite-elasticsearch8:
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     strategy:
       matrix:
         include:
@@ -300,6 +304,7 @@ jobs:
 
   test-postgres-elasticsearch7:
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     continue-on-error: ${{ matrix.experimental }}
     strategy:
       matrix:
@@ -364,6 +369,7 @@ jobs:
 
   test-sqlite-opensearch2:
     runs-on: ubuntu-latest
+    timeout-minutes: 60
     continue-on-error: ${{ matrix.experimental }}
     strategy:
       matrix:
@@ -419,6 +425,7 @@ jobs:
       - test-postgres-elasticsearch7
       - test-sqlite-opensearch2
     runs-on: ubuntu-latest
+    timeout-minutes: 10
     steps:
       - name: Check out the repo
         uses: actions/checkout@v6
