@@ -56,6 +56,7 @@ Wagtail 7.4 is designated a Long Term Support (LTS) release. Long Term Support r
  * Fix `PermissionError` on document serve tests under Windows (Matt Westcott)
  * Update JavaScript linting to ESLint 9, with updated linting rules and related fixes (Sage Abdullah)
  * Replace Puppeteer with Playwright for integration tests (Sage Abdullah)
+ * Add explicit `timeout-minutes` to GitHub Actions workflow jobs (Ashutosh)
 
 
 ## Upgrade considerations - changes affecting all projects
